--- a/panier.html
+++ b/panier.html
@@ -67,7 +67,7 @@
                     Afin de valider votre commande, veuillez remplir le formulaire suivant, acceptez les conditions générales de vente et confirmez votre panier.
                 </p>
                 <p class="mt-3 my-md-4 mx-xl-5 px-xl-5">
-                    <label class="col-5 col-lg-3 p-0" for="name">Nom : </label><input class="col-7 col-lg-9" type="text" id="name" name="user_name" minlength="2" maxlength="47" required><br />
+                    <label class="col-5 col-lg-3 p-0" for="name">Nom : </label><input class="col-7 col-lg-9" type="text" id="name" name="username" minlength="2" maxlength="47" required><br />
                     <label class="col-5 col-lg-3 p-0" for="firstname">Prénom : </label><input class="col-7 col-lg-9" type="text" id="firstname" name="firstname" minlength="2" maxlength="30" required><br />
                     <label class="col-5 col-lg-3 p-0" for="address">Adresse : </label><input class="col-7 col-lg-9" type="text" id="address" name="address" required><br />
                     <label class="col-5 col-lg-3 p-0" for="cp">Code Postal : </label><input class="col-7 col-lg-9" type="text" id="cp" name="cp" pattern="^((0[1-9])|([1-8][0-9])|(9[0-8])|(2A)|(2B))[0-9]{3}$" required><br />
